Refactor getMainRgbColors
