# src/main/java/dk/kb/image/api/v1/impl/ColorAnalysisApiServiceImpl.java
@@ -1,57 +1,24 @@
 package dk.kb.image.api.v1.impl;
 
-import dk.kb.image.AnalyseDeltaEOfPalette;
 import dk.kb.image.Facade;
 import dk.kb.image.api.v1.*;
 import dk.kb.image.model.v1.InlineResponse200Dto;
 
-import java.io.File;
 import java.util.List;
-import java.util.Map;
-import java.util.Map.Entry;
 
 import dk.kb.util.webservice.exception.ServiceException;
-import dk.kb.util.webservice.exception.InternalServiceException;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.InputStream;
-import java.io.OutputStream;
-import java.util.List;
-import java.util.Map;
-import java.util.Arrays;
-import java.util.stream.Collectors;
-import java.io.File;
-import com.fasterxml.jackson.databind.node.JsonNodeFactory;
-import com.fasterxml.jackson.databind.node.ObjectNode;
+
 import dk.kb.util.webservice.ImplBase;
 
-import javax.validation.constraints.DecimalMin;
-import javax.validation.constraints.NotNull;
-import javax.ws.rs.*;
 import javax.imageio.ImageIO;
-import javax.servlet.ServletConfig;
-import javax.servlet.ServletContext;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.ws.rs.core.Context;
-import javax.ws.rs.core.HttpHeaders;
-import javax.ws.rs.core.Request;
-import javax.ws.rs.core.Response;
-import javax.ws.rs.core.SecurityContext;
-import javax.ws.rs.core.UriInfo;
-import javax.ws.rs.ext.ContextResolver;
-import javax.ws.rs.ext.Providers;
-import javax.ws.rs.core.MediaType;
-import org.apache.cxf.jaxrs.model.wadl.Description;
-import org.apache.cxf.jaxrs.model.wadl.DocTarget;
-import org.apache.cxf.jaxrs.ext.MessageContext;
+
 import org.apache.cxf.jaxrs.ext.multipart.*;
 import java.awt.image.BufferedImage;
-
-
-import io.swagger.annotations.Api;
 
 /**
  * ds-image-analysis
@@ -122,12 +89,12 @@ public class ColorAnalysisApiServiceImpl extends ImplBase implements ColorAnalys
 
 
     @Override
-    public List<InlineResponse200Dto> getMainRgbColor(Attachment imageDetail, Integer topColors) {
+    public List<InlineResponse200Dto> getMainRgbColors(Attachment imageDetail, Integer topColors) {
         // read image
         try {
             in = imageDetail.getDataHandler().getInputStream();;
             img = ImageIO.read(in);
-            List<InlineResponse200Dto> response = Facade.getMostUsedRGBColor(img, topColors);
+            List<InlineResponse200Dto> response = Facade.getMostUsedRGBColors(img, topColors);
             return response;
         } catch (Exception f){
             throw handleException(f);
